feat: author's name added

--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
             <div class="footer__copy-right copy-right">
                 <div class="copy-right__container">
                     <div class="copy-right__row">
-                        <span>deneb by firfly themes</span>
+                        <span>deneb by firfly themes. designed by arman bitaraf</span>
                     </div>
                 </div>
             </div>
